web/app/styles/alert.css
.top-alerts {
  position: absolute;
  z-index: 10;
  top: 0;
  left: 0;
}

.top-alert {
  margin: 20px;
  padding: 10px;
  background: lightsalmon;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.6);
}

.top-alert .clicky {
  margin-top: -10px;
  margin-right: -10px;
}

.top-alert-footer {
  text-align: right;
}

.top-alert-footer a {
  font-style: italic;
  color: black;
  opacity: 0.6;
}

